--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2795,7 +2795,11 @@ input, select, textarea {
 		table tbody tr {
 			border: solid 1px rgba(255, 255, 255, 0.125);
 			border-left: 0;
-			border-right: 0;
+			border-right: 0;		}
+
+			table tr {
+			   display: grid;
+			   grid-template-columns: repeat(1, 20% 1fr 1fr);
 		}
 
 			table tbody tr:nth-child(2n + 1) {
@@ -2813,6 +2817,29 @@ input, select, textarea {
 			padding: 0 0.75em 0.75em 0.75em;
 			text-align: left;
 		}
+
+		table .expanded-row-content {
+			border-top: none;
+			display: grid;
+			grid-column: 1/-1;
+			justify-content: flex-start;
+			color: #AEB1B3;
+			font-size: 0.9em;
+			background-color: rgba(255, 255, 255, 0.125);
+		  }
+  
+		  table .hide-row {
+			display: none;
+		  }
+  
+		  table tr:first-child:hover {
+			cursor: default;
+			background-color: rgba(255, 255, 255, 0.125);
+		  }
+  
+		  table tr:hover {
+			background-color: rgba(255, 255, 255, 0.125);
+		  }
 
 		table thead {
 			border-bottom: solid 2px rgba(255, 255, 255, 0.125);
